# YBIGTA_newbie_assignment

./: .gitignore
1(1)-Python/: convert_for_submission.py  links.txt
1(1)-Python/1-graph-traversal/: lib.py
1(1)-Python/2-stack-queue-deque/: 11866.py  2164.py  lib.py
1(1)-Python/3-divide-and-conquer-multiplication/: 1629.py  lib.py
1(1)-Python/submission/: 1_1260.py  2_11866.py  2_2164.py  3_10830.py  3_1629.py  4_3080.py  4_5670.py
1(2)-CS_basics/: conda.yml  script.sh
2(1)-Network/netprobe/: dns.py  http.py  tcp.py
2(1)-Network/submission/: google.json  tcp_fail.json
3(1)-Basic_Statistics/: basic_statistics.ipynb
5(1)-Basic_ML/: basic_ML.ipynb
5(2)-DL/: NN.ipynb  mlp.py
6(1)-CV/: train_notebook.ipynb
6(2)-NLP/: README.md  [6회차] NLP 과제.md  environment.yml  pyproject.toml  requirements.txt
6(2)-NLP/baseline/: baseline.ipynb  config.py  dataset.py  evaluate.py  main.py  model.py  predict.py  preprocess.py  train.py
6(2)-NLP/data/: test_unlabeled.tsv  val.tsv
6(2)-NLP/submission/: submission.csv  submission_example.csv
