[project]
name = "kor-nlu-datasets"
version = "0.1.0"
description = "KorNLI and KorSTS: Korean NLU Benchmark Datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
